# routes/businessRouter.js
@@ -6,15 +6,6 @@ const {authentication,forgotPasswordVerify} = require('../middlewares/authentica
 
 module.exports=function(){
     router.post('/signUp', controller.businessController.signUp);
-    router.post('/login', controller.businessController.login);
-    router.post('/logout', authentication, controller.userController.logout);
-    router.post('/forgotPassword', controller.userController.forgotPassword);
-    router.post('/resendForgotPasswordLink', controller.userController.resendForgotPasswordLink);
-    router.get('/resetPassword', forgotPasswordVerify, controller.userController.resetPassword);
-    router.post('/forgotChangePassword', controller.userController.forgotChangePassword);
-    router.post('/changePassword', authentication, controller.userController.changePassword);
-    router.post('/otpVerify', controller.userController.otpVerify);
-    router.post('/resendOtp', controller.userController.resendOtp);
 
     router.get("/cms",authentication, controller.userController.cms)
     router.get("/notificationsList",authentication, controller.userController.notificationsList)
